--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <li><a href="#">Tarifs</a></li>
       </ul>
     </li>
-    <li><a href="#">Forum</a></li>
+    <li><a href="forum.html">Forum</a></li>
     <li><a href="#">Contact</a></li>
     </ul>
   </nav>
@@ -103,6 +103,8 @@
     <div class="slide"><img src="image/8.jpg" /></div>
   </div>
 </div>
+
+
 
 </br></br></br></br>
   <footer>
