ajout image de  fond + modif logos footer

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
           <td><a href="confidentialite.html" class="plan">Politique de confidentialité</a></td>
           <td><a href="contact.html" class="plan">Contact</a></td>
 
-          <td><button class="logos_footer"><a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"</a></button></td>
-          <td><button class="logos_footer"><a href="https://www.facebook.com/MCJP.officiel"><img src="image/facebook.png" alt="Facebook"</a></button></td>
-          <td><button class="logos_footer"><a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"</a></button></td>
-          <td><button class="logos_footer"><a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"</a></button></td>
+          <td><button><a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"</a></button></td>
+          <td><button id="logos_footer"><a href="https://www.facebook.com/MCJP.officiel"><img src="image/facebook.png" alt="Facebook"</a></button></td>
+          <td><button><a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"</a></button></td>
+          <td><button><a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"</a></button></td>
         </tr>
       </table>
     </footer>
