--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
       <table>
         <td> 
-          <a href="index.html"><img id="logo" src="image/logo.png" width="80" height="80" alt="logo"/></a> 
+          <a href="index.html"><img id="logo" src="image/logo-alpha.png" width="80" height="80" alt="logo"/></a> 
         </td>
         <td>
-        <h1 id="titre">Maison de la culture du Japon</h1>
+        <h1 id="titre">日本文化の家・Maison de la culture du Japon</h1>
         </td>
       </table>
     </header>
