--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
             <li><a href="#">Agenda</a></li>
           </ul>
         </li>
-        <li class="deroulant"><a href="#">Billeterie</a>
-          <ul class="sous">
-            <li><a href="#">Tarifs</a></li>
-          </ul>
-        </li>
+        <li><a href="#">Billeterie</a></li>
         <li><a href="forum.html">Forum</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
