ajustements footer + new slidershow

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-
+<!--
     <div class="slider">
       <div class="slides">
         <div class="slide"><img src="image/1.jpg" /></div>
@@ -94,6 +94,44 @@
         <div class="slide"><img src="image/8.jpg" /></div>
       </div>
     </div>
+-->
+
+<div class="slidershow middle">
+
+      <div class="slides">
+        <input type="radio" name="r" id="r1" checked>
+        <input type="radio" name="r" id="r2">
+        <input type="radio" name="r" id="r3">
+        <input type="radio" name="r" id="r4">
+        <input type="radio" name="r" id="r5">
+        <div class="slide s1">
+          <img src="image/1.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="image/2.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="image/3.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="image/4.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="image/mont-fuji-violet.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="navigation">
+        <label for="r1" class="bar"></label>
+        <label for="r2" class="bar"></label>
+        <label for="r3" class="bar"></label>
+        <label for="r4" class="bar"></label>
+        <label for="r5" class="bar"></label>
+      </div>
+    </div>
+
+
+
 
     <footer>
       <div id="ma-boite">
