--- a/forum.html
+++ b/forum.html
@@ -1,92 +1,86 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Maison de la Culture du Japon</title>
-	<link href="forum.css" rel="stylesheet" type="text/css" />
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Maison de la Culture du Japon</title>
+    <link href="forum.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
-  <header>
-		<table>
-			<td>
-				<a href="index.html"><img id="logo" src="image/logo.png" width="80" height="80" alt="logo"/></a> 
-      </td>
-      <td>
-      <h1 id="titre">Maison de la culture du Japon</h1>
-      </td>
-    </table>
-  </header>
+  <body>
+    <header>
+      <table>
+        <td>
+          <a href="index.html"><img id="logo" src="image/logo-alpha.png" width="80" height="80" alt="logo"/></a> 
+        </td>
+        <td>
+        <h1 id="titre">日本文化の家・Maison de la culture du Japon</h1>
+        </td>
+      </table>
+    </header>
 
-  <nav role="navigation">
-  <div id="menuToggle">
-    <!--
-    A fake / hidden checkbox is used as click reciever,
-    so you can use the :checked selector on it.
-    -->
-    <input type="checkbox" />
-    
-    <span></span>
-    <span></span>
-    <span></span>
+    <nav role="navigation">
+      <div id="menuToggle">
+        <!--
+        A fake / hidden checkbox is used as click reciever,
+        so you can use the :checked selector on it.
+        -->
+        <input type="checkbox" />
+      
+        <span></span>
+        <span></span>
+        <span></span>
  
-    <ul id="menu">
-		<table width="400" border="0">
-  <tbody>
-    <tr>
-      <td><a href="home.html">&Eacutevènements</a></td>
-    </tr>
-    <tr>
-      <td><a href="timetable.html">Agenda</a></td>
-    </tr>
-    <tr>
-      <td><a href="map.html">Billeterie</a></td>
-    </tr>
-    <tr>
-      <td><a href="contact.html">Réseaux sociaux</a></td>
-    </tr>
-    <tr>
-      <td><a href="help.html">Help</a></td>
-    </tr>
-    <tr>
-      <td><a href="forum.html">Forum</a></td>
-    </tr>
-    <tr>
-      <td><a href="contact.html">Nous contacter</a></td>
-    </tr>
-    <tr>
-      <td><a href="contact.html">Plan du site</a></td>
-    </tr>
-    <tr>
-      <td><a href="contact.html">Informations pratiques</a></td>
-    </tr>
-  </tbody>
-</table>
-
-    </ul>
-  </div>
+        <ul id="menu">
+        <table width="400" border="0">
+          <tbody>
+            <tr>
+              <td><a href="home.html">&Eacute;vènements</a></td>
+            </tr>
+            <tr>
+              <td><a href="timetable.html">Agenda</a></td>
+            </tr>
+            <tr>
+              <td><a href="map.html">Billeterie</a></td>
+            </tr>
+            <tr>
+              <td><a href="contact.html">Réseaux sociaux</a></td>
+            </tr>
+            <tr>
+              <td><a href="help.html">Help</a></td>
+            </tr>
+            <tr>
+              <td><a href="forum.html">Forum</a></td>
+            </tr>
+            <tr>
+              <td><a href="contact.html">Nous contacter</a></td>
+            </tr>
+            <tr>
+              <td><a href="contact.html">Plan du site</a></td>
+            </tr>
+            <tr>
+              <td><a href="contact.html">Informations pratiques</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </ul>
+    </div>
 
   
-<!-- menu déroulant -->
-    <ul>
-    <li class="deroulant"><a href="#">&Eacutevènements</a>
-      <ul class="sous">
-        <li><a href="#">Actualités</a></li>
-        <li><a href="#">Agenda</a></li>
+        <!-- menu déroulant -->
+      <ul>
+        <li class="deroulant"><a href="#">&Eacute;vènements</a>
+          <ul class="sous">
+            <li><a href="#">Actualités</a></li>
+            <li><a href="#">Agenda</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Billeterie</a></li>
+        <li><a href="forum.html">Forum</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-    </li>
-    <li class="deroulant"><a href="#">Billeterie</a>
-      <ul class="sous">
-        <li><a href="#">Tarifs</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Forum</a></li>
-    <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-</br></br></br></br>
+    </nav>
 
 <form method="post" action="traitement.php">
    <p>
