--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
       <ul>
         <li class="deroulant"><a href="#">&Eacute;vènements</a>
           <ul class="sous">
-            <li><a href="#">Actualités</a></li>
-            <li><a href="#">Agenda</a></li>
+            <li class="sous2"><a href="#">Actualités</a></li>
+            <li class="sous2"><a href="#">Agenda</a></li>
           </ul>
         </li>
-        <li><a href="#">Billeterie</a></li>
-        <li><a href="forum.html">Forum</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="sous2"><a href="#">Billeterie</a></li>
+        <li class="sous2"><a href="forum.html">Forum</a></li>
+        <li class="sous2"><a href="#">Contact</a></li>
       </ul>
     </nav>
 
@@ -92,6 +92,7 @@
         <div class="slide"><img src="image/6.jpg" /></div>
         <div class="slide"><img src="image/7.jpg" /></div>
         <div class="slide"><img src="image/8.jpg" /></div>
+        <div class="slide"><img src="image/one_piece.jpg" /></div>
       </div>
     </div>
 
