--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
       </div>
     </div>
 
+<!-- Balise <hr> pour la séparation entre les évènements du calendrier -->
+
+
+
     <footer>
       <div id="ma-boite">
         
