--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         </ul>
       </div>
 
-      
         <!-- menu déroulant -->
       <ul>
         <li class="deroulant"><a href="#">&Eacute;vènements</a>
@@ -82,28 +81,66 @@
       </ul>
     </nav>
 
-    <div class="slider">
-      <div class="slides">
-        <div class="slide"><img src="image/1.jpg" /></div>
-        <div class="slide"><img src="image/2.jpg" /></div>
-        <div class="slide"><img src="image/3.jpg" /></div>
-        <div class="slide"><img src="image/4.jpg" /></div>
-        <div class="slide"><img src="image/5.jpg" /></div>
-        <div class="slide"><img src="image/6.jpg" /></div>
-        <div class="slide"><img src="image/7.jpg" /></div>
-        <div class="slide"><img src="image/8.jpg" /></div>
-        <div class="slide"><img src="image/one_piece.jpg" /></div>
+<!--calendrier-->
+    <div id="body">
+      <div id="calendrier"> 
+        <p>&Eacute;vènement 25 Janvier 2021 : Vous aurez l'honneur de rencontrer l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : 
+        Akira Toriyama </p>
+        <hr>
+        <p>&Eacute;vènement 24 Janvier 2021 : Venez nombreux goûter au Saké et déguster des gateaux traditionnels en compagnie de dessinateur de mangas</p>
+        <hr>
+        <p>&Eacute;vènement 23 Janvier 2021 : Venez nombreux visionner un court-métrage réalisé par nos collaborateurs de la Japan Expo</p>
+        <hr>
+        <p>&Eacute;vènement 22 Janvier 2021 : Venez nombreux visionner en notre compagnie les 2 premiers épisodes de l'animé tant attendu <em>"The Promised Neverland"</em> </p>
+        <hr>
+        <p>&Eacute;vènement 21 Janvier 2021</p>
+        <hr>
+        <p>Evènement 20 Janvier 2021</p>
+        <hr>
+        <p>Evènement 19 Janvier 2021</p>
+        <hr>
+        <p>Evènement 18 Janvier 2021</p>
+        <hr>
+        <p>Evènement 17 Janvier 2021</p>
+        <hr>
+        <p>Evènement 25 Janvier 2021</p>
+        <hr>
+        <p>Evènement 25 Janvier 2021</p>
+        <hr>
+        <p>Evènement 25 Janvier 2021</p>
+        <hr>
+        <p>Evènement 25 Janvier 2021</p>
+        <hr>
+        <p>Evènement 25 Janvier 2021</p>
+        <hr>
+        <p>Evènement 25 Janvier 2021</p>
+        <hr>
+      </div>
+
+      <div class="slider">
+        <div class="slides">
+          <div class="slide"><img src="image/1.jpg" /></div>
+          <div class="slide"><img src="image/2.jpg" /></div>
+          <div class="slide"><img src="image/3.jpg" /></div>
+          <div class="slide"><img src="image/4.jpg" /></div>
+          <div class="slide"><img src="image/5.jpg" /></div>
+          <div class="slide"><img src="image/6.jpg" /></div>
+          <div class="slide"><img src="image/7.jpg" /></div>
+          <div class="slide"><img src="image/8.jpg" /></div>
+          <div class="slide"><img src="image/one_piece.jpg" /></div>
+        </div>
       </div>
     </div>
-
 <!-- Balise <hr> pour la séparation entre les évènements du calendrier -->
 
 
-
+    </br>
     <footer>
       <div id="ma-boite">
         
-        <div class="plan">Copyright © 2020</div>
+        <div >
+          <a href="https://www.mcjp.fr/" class="plan">Copyright © 2021</a>
+        </div>
         <div>
           <a href="plan_du_site.html" class="plan">Plan du site</a>
         </div>
@@ -118,22 +155,22 @@
         </div>
         <!--Logos réseaux sociaux-->
         <div id="boite2">
-          <div class="element2">
+          <div>
             <button>
               <a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"/></a>
             </button>
           </div>
-          <div class="element2">
+          <div>
             <button>
               <a href="https://www.facebook.com/MCJP.officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-fb-bl.svg" alt="Facebook"/></i></a>
             </button>
           </div>
-          <div class="element2">
+          <div>
             <button>
               <a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"/></a>
             </button>
           </div>
-          <div class="element2">
+          <div>
             <button>
             <a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"/></a>
             </button>
