refonte page principale

--- a/index.html
+++ b/index.html
@@ -84,50 +84,34 @@
 <!--calendrier-->
     <div id="body">
       <div id="calendrier"> 
-        <p>&Eacute;vènement 25 Janvier 2021 : Vous aurez l'honneur de rencontrer l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : 
-        Akira Toriyama </p>
+        <p>&Eacute;vènement 23 Janvier 2021 : Venez nombreux visionner un court-métrage réalisé par nos collaborateurs de la Japan Expo
+         </p>
         <hr>
         <p>&Eacute;vènement 24 Janvier 2021 : Venez nombreux goûter au Saké et déguster des gateaux traditionnels en compagnie de dessinateur de mangas</p>
         <hr>
-        <p>&Eacute;vènement 23 Janvier 2021 : Venez nombreux visionner un court-métrage réalisé par nos collaborateurs de la Japan Expo</p>
+        <p>&Eacute;vènement 25 Janvier 2021 : Vous aurez l'honneur de rencontrer l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : 
+        Akira Toriyama</p>
         <hr>
-        <p>&Eacute;vènement 22 Janvier 2021 : Venez nombreux visionner en notre compagnie les 2 premiers épisodes de l'animé tant attendu <em>"The Promised Neverland"</em> </p>
+        <p>&Eacute;vènement 22 Janvier 2021 : Venez nombreux visionner en notre compagnie les 2 premiers épisodes de l'animé tant attendu <em>"The Promised Neverland"</em></p>
         <hr>
-        <p>&Eacute;vènement 21 Janvier 2021</p>
+        <p>&Eacute;vènement 21 Janvier 2021 : Venez nombreux rencontrer des fans incontestés du manga 
+          <em>"One Piece"</em> et visionner un cours épisode en leur compagnie</p>
         <hr>
-        <p>Evènement 20 Janvier 2021</p>
+        <p>&Eacute;vènement 20 Janvier 2021 : Pour les amateurs de lutte japonaise, venez défier et discuter avec les Sumos les plus titrés du monde entier !</p>
         <hr>
-        <p>Evènement 19 Janvier 2021</p>
-        <hr>
-        <p>Evènement 18 Janvier 2021</p>
-        <hr>
-        <p>Evènement 17 Janvier 2021</p>
-        <hr>
-        <p>Evènement 25 Janvier 2021</p>
-        <hr>
-        <p>Evènement 25 Janvier 2021</p>
-        <hr>
-        <p>Evènement 25 Janvier 2021</p>
-        <hr>
-        <p>Evènement 25 Janvier 2021</p>
-        <hr>
-        <p>Evènement 25 Janvier 2021</p>
-        <hr>
-        <p>Evènement 25 Janvier 2021</p>
-        <hr>
+        <p>&Eacute;vènement 19 Janvier 2021 : Pour les amateurs d'anciennes consoles, 
+        apportez votre Gameboy Color et votre jeu Pokémon afin de vous amuser en compagnie d'autres fans du célèbre jeu Japonais encore très réputé à ce jour !</p>
       </div>
 
       <div class="slider">
         <div class="slides">
-          <div class="slide"><img src="image/1.jpg" /></div>
-          <div class="slide"><img src="image/2.jpg" /></div>
-          <div class="slide"><img src="image/3.jpg" /></div>
-          <div class="slide"><img src="image/4.jpg" /></div>
-          <div class="slide"><img src="image/5.jpg" /></div>
-          <div class="slide"><img src="image/6.jpg" /></div>
-          <div class="slide"><img src="image/7.jpg" /></div>
-          <div class="slide"><img src="image/8.jpg" /></div>
+          <div class="slide"><img src="image/japan_expo.jpg" /></div>
+          <div class="slide"><img src="image/sake.jpg" /></div>
+          <div class="slide"><img src="image/akira_toriyama.jpg" /></div>
+          <div class="slide"><img src="image/promised_neverland.jpg" /></div>
           <div class="slide"><img src="image/one_piece.jpg" /></div>
+          <div class="slide"><img src="image/combat_sumo.jpg" /></div>
+          <div class="slide"><img src="image/pokemon.jpg" /></div>
         </div>
       </div>
     </div>
