--- a/evenements.html
+++ b/evenements.html
@@ -42,7 +42,7 @@
                 <td><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></td>
               </tr>
               <tr>
-                <td><a href="map.html">Billeterie</a></td>
+                <td><a href="billeterie.html">Billeterie</a></td>
               </tr>
               <tr>
                 <td><a href="forum.html">Forum</a></td>
@@ -75,7 +75,7 @@
             <li class="sous2"><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></li>
           </ul>
         </li>
-        <li class="sous2"><a href="#">Billeterie</a></li>
+        <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
         <li class="sous2"><a href="#">Contact</a></li>
       </ul>
@@ -97,7 +97,7 @@
         <p><strong>&Eacute;vènement 21 Janvier 2021 :</strong> Venez nombreux rencontrer des fans incontestés du manga 
           <em>"One Piece"</em> et visionner un cours épisode de l'animé en leur compagnie</p>
         
-        <p><strong>&Eacute;vènement 20 Janvier 2021 :</strong> Pour les amateurs de lutte japonaise, venez défier et discuter avec les Sumos les plus titrés du monde entier !</p>
+        <p><strong>&Eacute;vènement 20 Janvier 2021 :</strong> Pour les amateurs de lutte japonaise, venez assister à un combat réel et discuter avec les Sumos les plus titrés du monde entier !</p>
         
         <p><strong>&Eacute;vènement 19 Janvier 2021 :</strong> Pour les amateurs d'anciennes consoles, 
         apportez votre Gameboy Color et votre jeu Pokémon afin de vous amuser en compagnie d'autres fans du célèbre jeu Japonais encore très réputé à ce jour !</p>
