--- a/forum.html
+++ b/forum.html
@@ -42,7 +42,7 @@
                 <td><a href="timetable.html">Agenda</a></td>
               </tr>
               <tr>
-                <td><a href="map.html">Billeterie</a></td>
+                <td><a href="billeterie.html">Billeterie</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Réseaux sociaux</a></td>
@@ -75,25 +75,11 @@
             <li><a href="#">Agenda</a></li>
           </ul>
         </li>
-        <li><a href="#">Billeterie</a></li>
+        <li><a href="billeterie.html">Billeterie</a></li>
         <li><a href="forum.html">Forum</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-
-   <!-- <form method="post" action="traitement.php">
-      <p>
-        <label for="ameliorer">
-        Comment pensez-vous que je puisse améliorer mon site ?
-        </label>
-        <br />
-        
-        <textarea name="ameliorer" id="ameliorer" rows="10" cols="50">
-        Améliorer ton site ?!
-        Mais enfin ! Il est tellement génialissime qu'il n'est pas nécessaire de l'améliorer !
-        </textarea>       
-      </p>
-    </form>-->
 
 <!--Formulaire--> 
     <form action="/ma-page-de-traitement" method="post">
