réalisation page billeterie

--- a/billeterie.html
+++ b/billeterie.html
@@ -133,10 +133,25 @@
                 <p><button class="indisponible">Réservation indisponible</button></p>
             </div>
         </div>
-        <div id="panier">
-            <h3>VOTRE PANIER</h3>
-            <p>Votre panier est vide.</p>
+        <div id="colonne">
+            <div id="panier">
+                <h3>VOTRE PANIER</h3>
+                <p>Votre panier est vide.</p>
+            </div>
+            <div id="reduction">
+                <h3>CODE AVANTAGE<h3>
+                <p>Si vous possédez un code</br>avantage, saisissez-le et</br>validez.</p>
+                
+                <input type="text" id="name" name="user_name" placeholder="    Code">
+                <button>OK</button>
+                </br>
+                <h3>MODES DE PAIEMENT</h3>
+                <img src="image/CB.png" alt="Carte Bancaire"/>
+                <img src="image/MASTERCARD.png" alt="MasterCard"/>
+                <img src="image/VISA.png" alt="Carte Visa"/>
+            </div>
         </div>
+        
     </div>
 
     <footer>
