--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <td><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></td>
               </tr>
               <tr>
-                <td><a href="map.html">Billeterie</a></td>
+                <td><a href="billeterie.html">Billeterie</a></td>
               </tr>
               <tr>
                 <td><a href="forum.html">Forum</a></td>
@@ -75,7 +75,7 @@
             <li class="sous2"><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></li>
           </ul>
         </li>
-        <li class="sous2"><a href="#">Billeterie</a></li>
+        <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
         <li class="sous2"><a href="#">Contact</a></li>
       </ul>
