--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Maison de la Culture du Japon</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
   </head>
 
   <body>
@@ -141,22 +142,26 @@
         <div id="boite2">
           <div>
             <button>
-              <a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"/></a>
+              <!--<a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"/></a>-->
+              <a href="#" class="fa fa-twitter" style="font-size:30px;color:white;"></a>
             </button>
           </div>
           <div>
             <button>
-              <a href="https://www.facebook.com/MCJP.officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-fb-bl.svg" alt="Facebook"/></i></a>
+              <!--<a href="https://www.facebook.com/MCJP.officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-fb-bl.svg" alt="Facebook"/></i></a>-->
+              <a href="#" class="fa fa-facebook-square" style="font-size:30px;color:white;"></a>
             </button>
           </div>
           <div>
             <button>
-              <a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"/></a>
+              <!--<a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"/></a>-->
+              <a href="#" class="fa fa-instagram" style="font-size:30px;color:white;"></a>
             </button>
           </div>
           <div>
             <button>
-            <a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"/></a>
+            <!--<a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"/></a>-->
+            <a href="#" class="fa fa-youtube" style="font-size:30px;color:transparent;"></a>
             </button>
           </div>
         </div>
