modif ajout photo naruto

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>Samedi 23 Janvier 2021 : Venez nombreux visionner un court-métrage réalisé par nos collaborateurs de la Japan Expo
          </p>
         <hr>
-        <p>Lundi 25 Janvier 2021 : Venez nombreux goûter au Saké et déguster des gateaux traditionnels en compagnie de dessinateur de mangas</p>
+        <p>Lundi 25 Janvier 2021 : Venez visionner en compagnie de dessinateurs de mangas, l'animé Naruto</p>
         <hr>
         <p>Mardi 26 Janvier 2021 : Vous aurez l'honneur de rencontrer l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : 
         Akira Toriyama</p>
@@ -107,7 +107,7 @@
       <div class="slider">
         <div class="slides">
           <div class="slide"><img src="image/japan_expo.jpg" /></div>
-          <div class="slide"><img src="image/sake.jpg" /></div>
+          <div class="slide"><img src="image/naruto.jpg" /></div>
           <div class="slide"><img src="image/akira_toriyama.jpg" /></div>
           <div class="slide"><img src="image/promised_neverland.jpg" /></div>
           <div class="slide"><img src="image/one_piece.jpg" /></div>
@@ -143,25 +143,25 @@
           <div>
             <button>
               <!--<a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"/></a>-->
-              <a href="#" class="fa fa-twitter" style="font-size:30px;color:white;"></a>
+              <a href="#" class="fa fa-twitter-square" style="font-size:30px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
               <!--<a href="https://www.facebook.com/MCJP.officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-fb-bl.svg" alt="Facebook"/></i></a>-->
-              <a href="#" class="fa fa-facebook-square" style="font-size:30px;color:white;"></a>
+              <a href="#" class="fa fa-facebook-square" style="font-size:30px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
               <!--<a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"/></a>-->
-              <a href="#" class="fa fa-instagram" style="font-size:30px;color:white;"></a>
+              <a href="#" class="fa fa-instagram" style="font-size:30px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
             <!--<a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"/></a>-->
-            <a href="#" class="fa fa-youtube" style="font-size:30px;color:transparent;"></a>
+            <a href="#" class="fa fa-youtube-square" style="font-size:30px;color:black;"></a>
             </button>
           </div>
         </div>
