--- a/index.html
+++ b/index.html
@@ -118,50 +118,47 @@
     </div>
 <!-- Balise <hr> pour la séparation entre les évènements du calendrier -->
 
-
-    </br>
     <footer>
-      <div id="ma-boite">
-        
-        <div >
-          <a href="https://www.mcjp.fr/" class="plan">Copyright © 2021</a>
+      <div id="ma-boite1">
+        <div id="ma-boite">
+          <div >
+            <a href="https://www.mcjp.fr/" class="plan">Copyright © 2021</a>
+          </div>
+          <div>
+            <a href="plan_du_site.html" class="plan">Plan du site</a>
+          </div>
+          <div>
+            <a href="acces.html" class="plan">Accès</a>
+          </div>
+          <div>
+            <a href="confidentialite.html" class="plan">Politique de confidentialité</a>
+          </div>
+          <div>
+          <a href="contact.html" class="plan">Contact</a>
+          </div>
         </div>
-        <div>
-          <a href="plan_du_site.html" class="plan">Plan du site</a>
-        </div>
-        <div>
-          <a href="acces.html" class="plan">Accès</a>
-        </div>
-        <div>
-          <a href="confidentialite.html" class="plan">Politique de confidentialité</a>
-        </div>
-        <div>
-        <a href="contact.html" class="plan">Contact</a>
-        </div>
+
         <!--Logos réseaux sociaux-->
+
         <div id="boite2">
           <div>
             <button>
-              <!--<a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"/></a>-->
-              <a href="#" class="fa fa-twitter-square" style="font-size:30px;color:black;"></a>
+              <a href="#" class="fa fa-twitter-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
-              <!--<a href="https://www.facebook.com/MCJP.officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-fb-bl.svg" alt="Facebook"/></i></a>-->
-              <a href="#" class="fa fa-facebook-square" style="font-size:30px;color:black;"></a>
+              <a href="#" class="fa fa-facebook-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
-              <!--<a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"/></a>-->
-              <a href="#" class="fa fa-instagram" style="font-size:30px;color:black;"></a>
+              <a href="#" class="fa fa-instagram" style="font-size:25px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
-            <!--<a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"/></a>-->
-            <a href="#" class="fa fa-youtube-square" style="font-size:30px;color:black;"></a>
+              <a href="#" class="fa fa-youtube-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
         </div>
