--- a/plan_du_site.html
+++ b/plan_du_site.html
@@ -86,69 +86,72 @@
 
     <!-- texte du plan du site (body) -->
   </br>
-  <h2 id="titre_plan">Plan du site<h2>
-
+  <div id="case1">
+    <h2 id="titre_plan">Plan du site<h2>
     <ul>
       <li class="liste">&Eacute;vènements</li>
 
-        <li class="sousliste"><a href="actualites.html">Actualités</a></li>
+      <li class="sousliste"><a href="actualites.html">Actualités</a></li>
 
-        <li class="liste"><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></li>
-          <li class="sousliste2">Films</li>
-          <li class="sousliste2">Archives</li>
-            <li class="sousliste3">Septembre / Décembre 2013</li>
-            <li class="sousliste3">Septembre / Décembre 2012</li>
-            <li class="sousliste3">Septembre / Décembre 2011</li>
-            <li class="sousliste3">Septembre / Décembre 2010</li>
-            <li class="sousliste3">Septembre / Décembre 2009</li>
-            <li class="sousliste3">Septembre / Décembre 2008</li>
-            <li class="sousliste3">Septembre / Décembre 2007</li>
-            <li class="sousliste3">Septembre / Décembre 2006</li>
-            <li class="sousliste3">Septembre / Décembre 2005</li>
-            <li class="sousliste3">Septembre / Décembre 2004</li>
-            <li class="sousliste3">Septembre / Décembre 2003</li>
-            <li class="sousliste3">Septembre / Décembre 2002</li>
-            <li class="sousliste3">Septembre / Décembre 2001</li>
-            <li class="sousliste3">Septembre / Décembre 2000</li>
-            <li class="sousliste3">Avril / Juillet 2000</li>
-            <li class="sousliste3">Avril / Juillet 2001</li>
-            <li class="sousliste3">Janvier / Mars 2001</li>
-            <li class="sousliste3">Janvier / Mars 2002</li>
-            <li class="sousliste3">Avril / Juillet 2002</li>
-            <li class="sousliste3">Janvier / Mars 2003</li>
-            <li class="sousliste3">Avril / Juillet 2003</li>
-            <li class="sousliste3">Janvier / Mars 2004</li>
-            <li class="sousliste3">Avril / Juillet 2004</li>
-            <li class="sousliste3">Janvier / Mars 2005</li>
-            <li class="sousliste3">Avril / Juillet 2005</li>
-            <li class="sousliste3">Janvier / Mars 2006</li>
-            <li class="sousliste3">Avril / Juillet 2006</li>
-            <li class="sousliste3">Janvier / Mars 2007</li>
-            <li class="sousliste3">Avril / Juillet 2007</li>
-            <li class="sousliste3">Janvier / Mars 2008</li>
-            <li class="sousliste3">Avril / Juillet 2008</li>
-            <li class="sousliste3">Janvier / Mars 2009</li>
-            <li class="sousliste3">Avril / Juillet 2009</li>
-            <li class="sousliste3">Janvier / Mars 2010</li>
-            <li class="sousliste3">Avril / Juillet 2010</li>
-            <li class="sousliste3">Janvier / Mars 2011</li>
-            <li class="sousliste3">Avril / Juillet 2011</li>
-            <li class="sousliste3">Janvier / Mars 2012</li>
-            <li class="sousliste3">Avril / Juillet 2012</li>
-            <li class="sousliste3">Janvier / Mars 2013</li>
-            <li class="sousliste3">Avril / Juillet 2013</li>
-            <li class="sousliste3">Janvier / Mars 2014</li>
-            <li class="sousliste3">Avril / Juillet 2014</li>
-            <li class="sousliste3">Septembre / Décembre 2014</li>
-            <li class="sousliste3">Janvier / Mars 2015</li>
-            <li class="sousliste3">Avril / Juillet 2015</li>
-            <li class="sousliste3">Septembre / Décembre 2015</li>
-            <li class="sousliste3">Janvier / Mars 2016</li>
+      <li class="liste"><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></li>
 
-        <li class="liste"><a href="https://www.mcjp.fr/fr/agenda">Billeterie</a></li>
-        <li class="sousliste2">Tarifs</li>
+      <li class="sousliste2">Films</li>
+
+      <li class="sousliste2">Archives</li>
+      
+      <li class="sousliste3">Septembre / Décembre 2013</li>
+      <li class="sousliste3">Septembre / Décembre 2012</li>
+      <li class="sousliste3">Septembre / Décembre 2011</li>
+      <li class="sousliste3">Septembre / Décembre 2010</li>
+      <li class="sousliste3">Septembre / Décembre 2009</li>
+      <li class="sousliste3">Septembre / Décembre 2008</li>
+      <li class="sousliste3">Septembre / Décembre 2007</li>
+      <li class="sousliste3">Septembre / Décembre 2006</li>
+      <li class="sousliste3">Septembre / Décembre 2005</li>
+      <li class="sousliste3">Septembre / Décembre 2004</li>
+      <li class="sousliste3">Septembre / Décembre 2003</li>
+      <li class="sousliste3">Septembre / Décembre 2002</li>
+      <li class="sousliste3">Septembre / Décembre 2001</li>
+      <li class="sousliste3">Septembre / Décembre 2000</li>
+      <li class="sousliste3">Avril / Juillet 2000</li>
+      <li class="sousliste3">Avril / Juillet 2001</li>
+      <li class="sousliste3">Janvier / Mars 2001</li>
+      <li class="sousliste3">Janvier / Mars 2002</li>
+      <li class="sousliste3">Avril / Juillet 2002</li>
+      <li class="sousliste3">Janvier / Mars 2003</li>
+      <li class="sousliste3">Avril / Juillet 2003</li>
+      <li class="sousliste3">Janvier / Mars 2004</li>
+      <li class="sousliste3">Avril / Juillet 2004</li>
+      <li class="sousliste3">Janvier / Mars 2005</li>
+      <li class="sousliste3">Avril / Juillet 2005</li>
+      <li class="sousliste3">Janvier / Mars 2006</li>
+      <li class="sousliste3">Avril / Juillet 2006</li>
+      <li class="sousliste3">Janvier / Mars 2007</li>
+      <li class="sousliste3">Avril / Juillet 2007</li>
+      <li class="sousliste3">Janvier / Mars 2008</li>
+      <li class="sousliste3">Avril / Juillet 2008</li>
+      <li class="sousliste3">Janvier / Mars 2009</li>
+      <li class="sousliste3">Avril / Juillet 2009</li>
+      <li class="sousliste3">Janvier / Mars 2010</li>
+      <li class="sousliste3">Avril / Juillet 2010</li>
+      <li class="sousliste3">Janvier / Mars 2011</li>
+      <li class="sousliste3">Avril / Juillet 2011</li>
+      <li class="sousliste3">Janvier / Mars 2012</li>
+      <li class="sousliste3">Avril / Juillet 2012</li>
+      <li class="sousliste3">Janvier / Mars 2013</li>
+      <li class="sousliste3">Avril / Juillet 2013</li>
+      <li class="sousliste3">Janvier / Mars 2014</li>
+      <li class="sousliste3">Avril / Juillet 2014</li>
+      <li class="sousliste3">Septembre / Décembre 2014</li>
+      <li class="sousliste3">Janvier / Mars 2015</li>
+      <li class="sousliste3">Avril / Juillet 2015</li>
+      <li class="sousliste3">Septembre / Décembre 2015</li>
+      <li class="sousliste3">Janvier / Mars 2016</li>
+
+      <li class="liste"><a href="https://www.mcjp.fr/fr/agenda">Billeterie</a></li>
+      <li class="sousliste2">Tarifs</li>
     </ul>
-
+  </div>
 
 
 
@@ -205,6 +208,6 @@
         </div>
       </div>
     </footer>
-    
+
   </body>
 </html>
