modif menu déroulant

--- a/plan_du_site.html
+++ b/plan_du_site.html
@@ -71,11 +71,9 @@
       
         <!-- menu déroulant -->
       <ul>
-        <li class="deroulant"><a href="evenements.html">&Eacute;vènements</a>
-          <ul class="sous">
-            <li class="sous2"><a href="agenda.html">Agenda</a></li>
-          </ul>
-        </li>
+        <div id="evenement">
+          <li class="sous2"><a href="evenements.html">&Eacute;vènements</a></li>
+        </div>
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
         <li class="sous2"><a href="contact.html">Contact</a></li>
@@ -97,6 +95,8 @@
         <li class="liste">Archives</li>
         </br>
         <li class="liste"><a href="billeterie.html">Billeterie</a></li>
+        </br>
+        <li class="liste"><a href="forum.html">Forum</a></li>
         </br>
         <li class="liste"><a href="forum.html">Forum</a></li>
       </ul>
