--- a/forum.html
+++ b/forum.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Maison de la Culture du Japon</title>
     <link href="forum.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
   </head>
 
   <body>
@@ -69,15 +70,12 @@
 
         <!-- menu déroulant -->
       <ul>
-        <li class="deroulant"><a href="#">&Eacute;vènements</a>
-          <ul class="sous">
-            <li><a href="#">Actualités</a></li>
-            <li><a href="#">Agenda</a></li>
-          </ul>
-        </li>
-        <li><a href="billeterie.html">Billeterie</a></li>
-        <li><a href="forum.html">Forum</a></li>
-        <li><a href="#">Contact</a></li>
+        <div id="evenement">
+          <li class="sous2"><a href="evenements.html">&Eacute;vènements</a></li>
+        </div>
+        <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
+        <li class="sous2"><a href="forum.html">Forum</a></li>
+        <li class="sous2"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -110,41 +108,46 @@
 
   
     <footer>
-      <div id="ma-boite">
-        
-        <div class="plan">Copyright © 2020</div>
-        <div>
-          <a href="plan_du_site.html" class="plan">Plan du site</a>
+      <div id="ma-boite1">
+        <div id="ma-boite">
+          <div >
+            <a href="https://www.mcjp.fr/" class="plan">Copyright © 2021</a>
+          </div>
+          <div>
+            <a href="plan_du_site.html" class="plan">Plan du site</a>
+          </div>
+          <div>
+            <a href="acces.html" class="plan">Accès</a>
+          </div>
+          <div>
+            <a href="confidentialite.html" class="plan">Politique de confidentialité</a>
+          </div>
+          <div>
+          <a href="contact.html" class="plan">Contact</a>
+          </div>
         </div>
-        <div>
-          <a href="acces.html" class="plan">Accès</a>
-        </div>
-        <div>
-          <a href="confidentialite.html" class="plan">Politique de confidentialité</a>
-        </div>
-        <div>
-        <a href="contact.html" class="plan">Contact</a>
-        </div>
+
         <!--Logos réseaux sociaux-->
+
         <div id="boite2">
-          <div class="element2">
+          <div>
             <button>
-              <a href="https://twitter.com/mcjp_officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-tw-bl.svg" alt="Twitter"/></a>
+              <a href="#" class="fa fa-twitter-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
-          <div class="element2">
+          <div>
             <button>
-              <a href="https://www.facebook.com/MCJP.officiel"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-fb-bl.svg" alt="Facebook"/></i></a>
+              <a href="#" class="fa fa-facebook-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
-          <div class="element2">
+          <div>
             <button>
-              <a href="https://www.instagram.com/mcjp_officiel/"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-insta-bl.svg" alt="Instagram"/></a>
+              <a href="#" class="fa fa-instagram" style="font-size:25px;color:black;"></a>
             </button>
           </div>
-          <div class="element2">
+          <div>
             <button>
-            <a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos"><img src="https://www.mcjp.fr/bundles/lehubagencemcjp/images/icon-yt-bl.svg" alt="Youtube"/></a>
+              <a href="#" class="fa fa-youtube-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
         </div>
