--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@
 
         <!-- menu déroulant -->
       <ul>
-        <li class="deroulant"><a href="evenements.html">&Eacute;vènements</a>
-          <ul class="sous">
-            <li class="sous2"><a href="#">Actualités</a></li>
-            <li class="sous2"><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></li>
-          </ul>
-        </li>
+        <div id="evenement">
+          <li class="sous2"><a href="evenements.html">&Eacute;vènements</a></li>
+        </div>
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
-        <li class="sous2"><a href="#">Contact</a></li>
+        <li class="sous2"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
