--- a/forum.html
+++ b/forum.html
@@ -132,22 +132,22 @@
         <div id="boite2">
           <div>
             <button>
-              <a href="#" class="fa fa-twitter-square" style="font-size:25px;color:black;"></a>
+              <a href="https://twitter.com/mcjp_officiel" class="fa fa-twitter-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
-              <a href="#" class="fa fa-facebook-square" style="font-size:25px;color:black;"></a>
+              <a href="https://www.facebook.com/MCJP.officiel" class="fa fa-facebook-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
-              <a href="#" class="fa fa-instagram" style="font-size:25px;color:black;"></a>
+              <a href="https://www.instagram.com/mcjp_officiel/" class="fa fa-instagram" style="font-size:25px;color:black;"></a>
             </button>
           </div>
           <div>
             <button>
-              <a href="#" class="fa fa-youtube-square" style="font-size:25px;color:black;"></a>
+              <a href="https://www.youtube.com/channel/UC6tThdaeY951YFJC_UDwRRQ/videos" class="fa fa-youtube-square" style="font-size:25px;color:black;"></a>
             </button>
           </div>
         </div>
