--- a/forum.html
+++ b/forum.html
@@ -37,10 +37,7 @@
           <table width="400" border="0">
             <tbody>
               <tr>
-                <td><a href="home.html">&Eacute;vènements</a></td>
-              </tr>
-              <tr>
-                <td><a href="timetable.html">Agenda</a></td>
+                <td><a href="evenements.html">Agenda</a></td>
               </tr>
               <tr>
                 <td><a href="billeterie.html">Billeterie</a></td>
@@ -49,16 +46,16 @@
                 <td><a href="contact.html">Réseaux sociaux</a></td>
               </tr>
               <tr>
-                <td><a href="help.html">Help</a></td>
-              </tr>
-              <tr>
                 <td><a href="forum.html">Forum</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Nous contacter</a></td>
               </tr>
               <tr>
-                <td><a href="contact.html">Plan du site</a></td>
+                <td><a href="plan_du_site.html">Plan du site</a></td>
+              </tr>
+              <tr>
+                <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Informations pratiques</a></td>
@@ -71,7 +68,7 @@
         <!-- menu déroulant -->
       <ul>
         <div id="evenement">
-          <li class="sous2"><a href="evenements.html">&Eacute;vènements</a></li>
+          <li class="sous2"><a href="evenements.html">Agenda</a></li>
         </div>
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
