--- a/index.html
+++ b/index.html
@@ -37,19 +37,13 @@
           <table width="400" border="0">
             <tbody>
               <tr>
-                <td><a href="evenements.html">&Eacute;vènements</a></td>
-              </tr>
-              <tr>
-                <td><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></td>
+                <td><a href="evenements.html">Agenda</a></td>
               </tr>
               <tr>
                 <td><a href="billeterie.html">Billeterie</a></td>
               </tr>
               <tr>
                 <td><a href="forum.html">Forum</a></td>
-              </tr>
-              <tr>
-                <td><a href="help.html">Help</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Réseaux sociaux</a></td>
@@ -59,6 +53,9 @@
               </tr>
               <tr>
                 <td><a href="plan_du_site.html">Plan du site</a></td>
+              </tr>
+              <tr>
+                <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Informations pratiques</a></td>
@@ -71,7 +68,7 @@
         <!-- menu déroulant -->
       <ul>
         <div id="evenement">
-          <li class="sous2"><a href="evenements.html">&Eacute;vènements</a></li>
+          <li class="sous2"><a href="evenements.html">Agenda</a></li>
         </div>
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
@@ -93,7 +90,7 @@
         <p>Mercredi 27 Janvier 2021 : Venez nombreux visionner en notre compagnie les 2 premiers épisodes de l'animé tant attendu <em>"The Promised Neverland"</em></p>
         <hr>
         <p>Jeudi 28 Janvier 2021 : Venez nombreux rencontrer des fans incontestés du manga 
-          <em>"One Piece"</em> et visionner un cours épisode de l'animé en leur compagnie</p>
+          <em>"One Piece"</em> et visionner un court épisode de l'animé en leur compagnie</p>
         <hr>
         <p>Vendredi 29 Janvier 2021 : Pour les amateurs de lutte japonaise, venez assister à un combat réel et discuter avec les Sumos les plus titrés du monde entier !</p>
         <hr>
