--- a/plan_du_site.html
+++ b/plan_du_site.html
@@ -37,19 +37,13 @@
           <table width="400" border="0">
             <tbody>
               <tr>
-                <td><a href="evenements.html">&Eacute;vènements</a></td>
-              </tr>
-              <tr>
-                <td><a href="timetable.html">Agenda</a></td>
+                <td><a href="evenements.html">Agenda</a></td>
               </tr>
               <tr>
                 <td><a href="billeterie.html">Billeterie</a></td>
               </tr>
               <tr>
                 <td><a href="forum.html">Forum</a></td>
-              </tr>
-              <tr>
-                <td><a href="help.html">Help</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Réseaux sociaux</a></td>
@@ -59,6 +53,9 @@
               </tr>
               <tr>
                 <td><a href="contact.html">Plan du site</a></td>
+              </tr>
+              <tr>
+                <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Informations pratiques</a></td>
@@ -72,7 +69,7 @@
         <!-- menu déroulant -->
       <ul>
         <div id="evenement">
-          <li class="sous2"><a href="evenements.html">&Eacute;vènements</a></li>
+          <li class="sous2"><a href="evenements.html">Agenda</a></li>
         </div>
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
