--- a/billeterie.html
+++ b/billeterie.html
@@ -37,19 +37,13 @@
           <table width="400" border="0">
             <tbody>
               <tr>
-                <td><a href="evenements.html">&Eacute;vènements</a></td>
-              </tr>
-              <tr>
-                <td><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></td>
+                <td><a href="evenements.html">Agenda</a></td>
               </tr>
               <tr>
                 <td><a href="billeterie.html">Billeterie</a></td>
               </tr>
               <tr>
                 <td><a href="forum.html">Forum</a></td>
-              </tr>
-              <tr>
-                <td><a href="help.html">Help</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Réseaux sociaux</a></td>
@@ -59,6 +53,9 @@
               </tr>
               <tr>
                 <td><a href="plan_du_site.html">Plan du site</a></td>
+              </tr>
+              <tr>
+                <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Informations pratiques</a></td>
