modifs + ajouts page acces

--- a/forum.html
+++ b/forum.html
@@ -75,7 +75,34 @@
         <li class="sous2"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-
+    
+<!--Commentaire--> 
+    <div id="commentaire">
+      <h4><em>facos95</em> a écrit un avis (oct. 2020)</h4>
+      <p>J'ai toujours eu un grand plaisir de passer dans ce bâtiment depuis le Japonisme 2018. 
+      De superbes expositions sur le Japon toujours bien présentées. 
+      Plusieurs étages qui nous offrent une vue culturelle et traditionnelle sur un Japon qui fascine de plus en plus le monde.</p>
+      <div class="signaler">
+        <button>Répondre</button>
+        <button>Signaler</button>
+      </div>
+      <hr>
+      <h4><em>Ilusia</em> a écrit un avis (sept. 2019)</h4>
+      <p>Je suis allée a plumier repris et au plus part pour visitée le nouvel exposition au le spectacle,toujours de qualité supérieur 
+      Belle endroit a ne pas raté.</p>
+      <div class="signaler">
+        <button>Répondre</button>
+        <button>Signaler</button>
+      </div>
+      <hr>
+      <h4><em>M'miou</em> a écrit un avis (mai 2019)</h4>
+      <p>Les deux dernières expos que j'ai vues étaient très intéressantes : Foujita et celle qui est en cours actuellement : Otsu - E Beaucoup d'originalité. 
+      En plus la Maison de la Culture du Japon est superbement bien située. Et le prix de l'entrée pour leurs expositions est peu cher. Allez-y !!</p>
+      <div class="signaler">
+        <button>Répondre</button>
+        <button>Signaler</button>
+      </div>
+    </div>
 <!--Formulaire--> 
     <form action="/ma-page-de-traitement" method="post">
       <div>
